fixing alignments
fixing the page alignments

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,3 +9,7 @@ table {
 h1 {
     text-align: center; 
 }
+
+table td {
+    padding: 10px 10px 10px 10px; 
+}
